2010-09-16  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg2.plt tutorial/eg6.plt tutorial/test_tikz.plt 
	tutorial/Makefile.am.in tutorial/header.tex tutorial/tutorial.tex:
	Update the LaTeX tutorial a bit.  More could be done.

2010-09-15  Ingo Thies  <ingo.thies@gmx.de>

	* src/graph3d.c src/graph3d.h src/mouse.c src/set.c src/unset.c:
	Switch the middle button left/right mouse zoom behaviour in 3D plots
	so that the zoom response is logarithmic.  

2010-09-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm:  As of libgd 2.0.36 you can now specify a TrueType font
	using either Fontconfig syntax or using the font file name directly.
	But switching from one form to the other was only possible as an 
	option of "set terminal".  This patch enables us to specify these two
	forms of the font name in "set title", "set xlabel", and so on.

2010-09-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (strlen_tex):  Add a special-case routine to
	estimate the true number of output characters in a LaTeX string
	containing markup. This is not a real LaTeX parser, but even a poor
	estimate is better than just calling strlen().
	Bug #1603348 and others

	* term/latex.trm term/lua.trm term/pslatex.trm: Set flag TERM_IS_LATEX
	so that strings passed to these terminals are sent to strlen_tex() 
	rather than the normal enhanced text string length estimation.

2010-09-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): When calculating the horizontal space
	required for x axis tick labels, we must ignore ticks that are outside
	the current axis range.

	* src/mouse.c (apply_zoom): Tick labels generated by
	'using xticlabels(N)' may have changed while the plot was zoomed, so we
	must preserve them when un-zooming.

2010-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_close):  Free matrix data that was stored in memory